<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_big"
        android:layout_marginRight="@dimen/spacing_big"
        android:background="@drawable/menu_radius_shape"
        android:orientation="vertical">

        <TextView
            android:id="@+id/modify"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingRight="@dimen/spacing_normal"
            android:background="@drawable/bg_btn_selector"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/spacing_normal"
            android:text="@string/pw_main_modify"
            android:textColor="@color/black"
            android:textSize="@dimen/font_snormal"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray"
            ></View>

        <TextView
            android:id="@+id/mshort"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingRight="@dimen/spacing_normal"
            android:background="@drawable/bg_btn_selector"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/spacing_normal"
            android:text="@string/pw_main_short"
            android:textColor="@color/black"
            android:textSize="@dimen/font_snormal"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray"
            ></View>

        <TextView
            android:id="@+id/del"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_btn_selector"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/spacing_normal"
            android:paddingRight="@dimen/spacing_normal"
            android:text="@string/pw_main_del"
            android:textColor="@color/black"
            android:textSize="@dimen/font_snormal"
            />
    </LinearLayout>

</LinearLayout>
